--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "QCMaker"
+name = "Newsy"
 version = "0.1.0"
 description = "A QCM generator application"
 authors = ["Walid Zakan"]
 license = ""
 repository = ""
-default-run = "QCMaker"
+default-run = "Newsy"
 edition = "2021"
 rust-version = "1.60"
 
