--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.3",
-    "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
     "idb": "^8.0.1",
     "lucide-react": "^0.469.0",
     "mailparser": "^3.7.2",
