--- a/package.json
+++ b/package.json
@@ -6,47 +6,53 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "pnpm exec prisma generate",
+    "db:migrate": "pnpm exec prisma migrate dev",
+    "db:studio": "pnpm exec prisma studio",
+    "postinstall": "pnpm db:generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@formkit/auto-animate": "^0.8.2",
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^6.3.0",
     "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@tanstack/react-table": "^8.20.6",
-    "@tauri-apps/api": "^2.0.0",
-    "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-fs": "~2",
-    "@tiptap/extension-color": "^2.11.0",
-    "@tiptap/extension-highlight": "^2.10.4",
-    "@tiptap/extension-placeholder": "^2.10.4",
-    "@tiptap/extension-subscript": "^2.10.4",
-    "@tiptap/extension-superscript": "^2.10.4",
-    "@tiptap/extension-text-style": "^2.10.4",
-    "@tiptap/extension-underline": "^2.10.4",
-    "@tiptap/pm": "^2.10.4",
-    "@tiptap/react": "^2.10.4",
-    "@tiptap/starter-kit": "^2.10.4",
+    "@tauri-apps/api": "^2.2.0",
+    "@tauri-apps/plugin-dialog": "~2.2.0",
+    "@tauri-apps/plugin-fs": "~2.2.0",
+    "@tiptap/extension-color": "^2.11.3",
+    "@tiptap/extension-highlight": "^2.11.3",
+    "@tiptap/extension-placeholder": "^2.11.3",
+    "@tiptap/extension-subscript": "^2.11.3",
+    "@tiptap/extension-superscript": "^2.11.3",
+    "@tiptap/extension-text-style": "^2.11.3",
+    "@tiptap/extension-underline": "^2.11.3",
+    "@tiptap/pm": "^2.11.3",
+    "@tiptap/react": "^2.11.3",
+    "@tiptap/starter-kit": "^2.11.3",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,11 +62,12 @@
     "idb": "^8.0.1",
     "lucide-react": "^0.469.0",
     "mailparser": "^3.7.2",
-    "motion": "^11.17.0",
-    "nanoid": "^5.0.9",
+    "motion": "^11.18.2",
     "next": "15.1.2",
+    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
+    "prisma": "^6.3.0",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
     "react-day-picker": "8.10.1",
@@ -69,23 +76,22 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "react-shadow": "^20.6.0",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1",
-    "zustand": "^5.0.2"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tauri-apps/cli": "^2.2.5",
+    "@eslint/eslintrc": "^3.2.0",
+    "@tauri-apps/cli": "^2.2.7",
     "@types/mailparser": "^3.4.5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/node": "^20.17.16",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^9.19.0",
     "eslint-config-next": "15.1.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
