--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "pnpm exec prisma generate",
+    "db:generate": "pnpm exec prisma generate --no-engine",
     "db:migrate": "pnpm exec prisma migrate dev",
     "db:studio": "pnpm exec prisma studio",
     "postinstall": "pnpm db:generate"
@@ -20,6 +20,7 @@
     "@formkit/auto-animate": "^0.8.2",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.3.0",
+    "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
