So this is just like a checkpoint I have tried for sooo long to get fetch the emails on the server side and at the same time preserve a nice layout however, i couldn't so i decided that im gonna stick with client side fetching Also i removed the access and refresh tokens from the session because that was soooo stupid from me

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
-    "@tanstack/react-table": "^8.20.6",
     "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/plugin-dialog": "~2.2.0",
     "@tauri-apps/plugin-fs": "~2.2.0",
@@ -54,7 +53,6 @@
     "@tiptap/pm": "^2.11.3",
     "@tiptap/react": "^2.11.3",
     "@tiptap/starter-kit": "^2.11.3",
-    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -85,6 +83,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@tauri-apps/cli": "^2.2.7",
+    "@types/crypto-js": "^4.2.2",
     "@types/mailparser": "^3.4.5",
     "@types/node": "^20.17.16",
     "@types/react": "^19.0.8",
