perf(emails-actions): Made sure that email actions such as marking as read/unread, star/unstar... happen instantly refactor(folder-structure): create a separate hooks folder for hooks concerning the inbox feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
-        "TAURI"
+        "TAURI",
+        "unstar",
+        "unstarring"
     ],
     "eslint.useFlatConfig": true
 }
