chore(drop-prisma): I switched to using Drizzle instead of Prisma

--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "pnpm exec prisma generate --no-engine",
-    "db:migrate": "pnpm exec prisma migrate dev",
-    "db:studio": "pnpm exec prisma studio",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:pull": "drizzle-kit pull",
     "postinstall": "pnpm db:generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
+    "@auth/drizzle-adapter": "^1.9.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@formkit/auto-animate": "^0.8.2",
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.5.0",
-    "@prisma/extension-accelerate": "^1.2.1",
+    "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -40,6 +41,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "@tauri-apps/api": "^2.2.0",
@@ -59,6 +61,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.4",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.42.0",
     "googleapis": "^144.0.0",
     "idb": "^8.0.2",
     "lucide-react": "^0.469.0",
@@ -87,12 +91,13 @@
     "@types/crypto-js": "^4.2.2",
     "@types/mailparser": "^3.4.5",
     "@types/node": "^20.17.17",
+    "@types/pg": "^8.11.13",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "drizzle-kit": "^0.31.0",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.1",
-    "prisma": "^6.5.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
