--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "postinstall": "pnpm db:generate"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.9.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -57,6 +56,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -69,7 +69,6 @@
     "mailparser": "^3.7.2",
     "motion": "^12.4.1",
     "next": "15.1.2",
-    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.2",
     "react": "^19.0.0",
