--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,3 @@
 {
-    "plugins": ["prettier-plugin-tailwindcss"],
-    "printWidth": 120,
-    "useTabs": false,
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "semi": true,
-    "singleQuote": true,
-    "jsxSingleQuote": true,
-    "bracketSpacing": true,
-    "arrowParens": "always",
-    "bracketSameLine": false,
-    "endOfLine": "lf"
-  }
-  
+  "plugins": ["prettier-plugin-tailwindcss"]
+}
