feat(inbox-scan): implement the basic logic for scanning the inbox and detecting newsletters

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "db:pull": "drizzle-kit pull",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint:ci": "git diff --name-only origin/main | grep -E '\\.(ts|tsx)$' | xargs eslint",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "verify": "pnpm lint && pnpm typecheck",
     "format": "prettier --write \"**/*.{ts,tsx,json,md,css,html}\"",
@@ -76,6 +74,7 @@
     "motion": "^12.4.1",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.8.16",
     "nuqs": "^2.3.2",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
