feat: implement background newsletter scan
Introduces functionality to scan user Gmail inboxes for newsletter subscriptions.

The scan runs as a background task, initiated via a frontend action.
It utilizes a database-driven approach to manage state and handle
the long-running nature of the task within Vercel serverless limits.

- Added `scanJobs` table schema and relations.
- Created API endpoints for start, process (chunked), and status polling.
- Added `isNewsletter` heuristic logic based on email metadata.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,17 @@
 {
-    "cSpell.words": [
-        "TAURI",
-        "unstar",
-        "unstarring"
-    ],
-    "eslint.useFlatConfig": true
+  "cSpell.words": ["TAURI", "unstar", "unstarring"],
+  "eslint.useFlatConfig": true,
+  "github.copilot.enable": {
+    "*": false,
+    "plaintext": true,
+    "markdown": false,
+    "scminput": false,
+    "yaml": false,
+    "python": true,
+    "javascript": true,
+    "php": false,
+    "jsonc": true,
+    "powershell": true,
+    "shellscript": false
+  }
 }
