--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "nuqs": "^2.3.2",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
