feat(db): update the db schema to handle user subscriptions and newsletters catalog
Add user_subscriptions table to store the user newsletters subscriptions
Add newsletters_catalog table to store all the newsletters

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
-  "cSpell.words": ["TAURI", "unstar", "unstarring"],
+  "cSpell.words": [
+    "TAURI",
+    "unstar",
+    "unstarring"
+  ],
   "eslint.useFlatConfig": true,
   "github.copilot.enable": {
-    "*": false,
+    "*": true,
     "plaintext": true,
     "markdown": false,
     "scminput": false,
