--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     "dompurify": "^3.2.4",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
+    "framer-motion": "^12.12.1",
     "googleapis": "^144.0.0",
     "idb": "^8.0.2",
     "lucide-react": "^0.469.0",
     "mailparser": "^3.7.2",
-    "motion": "^12.4.1",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.8.16",
